--- a/MessageKeys/pei_custom.US_en.properties
+++ b/MessageKeys/pei_custom.US_en.properties
@@ -16,3 +16,10 @@ psx.htmlc.admin_students.newstudent.pei_custom.Indigenous_Status=Indigenous Self
 psx.htmlc.teachers.studentpages.studentservices.studentservicesteam=Student Services Team
 psx.htmlc.teachers.studentpages.studentservices.student_exceptionalities_and_adaptations=Student Exceptionalities and Adaptations
 psx.htmlc.teachers.studentpages.studentservices.exceptionality=Exceptionality
+psx.htmlc.admin_students.general_demographics.pei_custom.use_legal=Use legal name on report cards
+psx.htmlc.alerts.student_services_alert.pei_custom.open_document=Open Document in Special Programs
+psx.htmlc.alerts.student_services_alert.pei_custom.has_a_profile=Has a Student Services profile.
+psx.htmlc.alerts.student_services_alert.pei_custom.view_document_list=View Document List
+psx.htmlc.alerts.student_services_alert.pei_custom.view_document_list_pssp=View Document List in Special Programs
+psx.htmlc.wildcards.title_student_end.pei_custom.student_services_alert=Student Services Alert
+psx.htmlc.wildcards.title_student_end.pei_custom.independent=Independent 18+
