--- a/MessageKeys/pei_custom.US_en.properties
+++ b/MessageKeys/pei_custom.US_en.properties
@@ -8,7 +8,7 @@ psx.htmlc.admin_students.newstudent.pei_custom.student_legal_name=Legal Name
 psx.htmlc.admin_students.newstudent.pei_custom.guardianship=Guardianship
 psx.htmlc.admin_students.general_demographics.pei_custom.Indigenous_Status=Indigenous Self-Identification
 psx.htmlc.admin_faculty.edit.pei_custom.mobile_phone=Mobile Phone #
-psx.htmlc.teachers.studentpages.demo.pei_custom.student_login=Student Login
+psx.htmlc.teachers.studentpages.demo.pei_custom.student_login=Network Login
 psx.htmlc.teachers.studentpages.demo.pei_custom.student_password=Password
 psx.htmlc.teachers.studentpages.demo.pei_custom.show_password=Show
 psx.htmlc.admin.students.more2.alert.leftnav.footer.student_alerts=Student Alerts
@@ -23,3 +23,19 @@ psx.htmlc.alerts.student_services_alert.pei_custom.view_document_list=View Docum
 psx.htmlc.alerts.student_services_alert.pei_custom.view_document_list_pssp=View Document List in Special Programs
 psx.htmlc.wildcards.title_student_end.pei_custom.student_services_alert=Student Services Alert
 psx.htmlc.wildcards.title_student_end.pei_custom.independent=Independent 18+
+psx.htmlc.admin_students.addresses.pei_custom.guardianship_not_set=Guardianship not set
+psx.html.admin_students.modifydata.next_year_home_room=Next Year Home Room
+psx.htmlc.alerts.student_services_alert.pei_custom.notes=Notes
+psx.html.admin_powerschedule_students.prefs.next_year_home_room=Next Year Home Room
+psx.htmlc.admin_students.addresses.student_lives_with=Student Lives With
+psx.htmlc.admin_students.addresses.street=Street
+psx.htmlc.admin_students.addresses.city=City
+psx.htmlc.admin_students.addresses.postal_code=Postal Code
+psx.htmlc.admin_students.addresses.date_archived=Date Archived
+psx.htmlc.admin_students.addresses.updated_by=Updated by
+psx.htmlc.admin_students.addresses.school=School
+psx.htmlc.admin_students.addresses.no_records=No previous addresses found.
+psx.htmlc.admin_students.addresses.previous_home_addresses=Previous Home Addresses
+psx.htmlc.admin_students.addresses.student_currently_lives_with=Student Currently Lives With:
+psx.htmlc.teachers.alerts.student_services_alert.pei_custom.notes=Notes:
+psx.htmlc.admin_students.previousgrades.total_credits=Total Credits:
