Add Legal Name Change Archive

--- a/MessageKeys/pei_custom.CA_fr.properties
+++ b/MessageKeys/pei_custom.CA_fr.properties
@@ -39,3 +39,10 @@ psx.htmlc.admin_students.addresses.previous_home_addresses=Adresses précédente
 psx.htmlc.admin_students.addresses.student_currently_lives_with=L&apos;élève habite actuellement avec :
 psx.htmlc.teachers.alerts.student_services_alert.pei_custom.notes=Notes :
 psx.htmlc.admin_students.previousgrades.total_credits=Crédits totaux :
+psx.htmlc.admin_students.general_demographics.pei_custom.legal_name_change_history=Legal Name Change History
+psx.htmlc.admin_students.general_demographics.pei_custom.changes_to_legal_name=Changes to legal name must be accompanied by documentation.
+psx.htmlc.admin_students.general_demographics.pei_custom.previous_legal_names_are_archived=Previous legal names are archived below.
+psx.htmlc.admin_students.general_demographics.pei_custom.former_legal_name=Former Legal Name
+psx.htmlc.admin_students.general_demographics.pei_custom.date_archived=Date Archived
+psx.htmlc.admin_students.general_demographics.pei_custom.updated_by=Updated by
+psx.htmlc.admin_students.general_demographics.pei_custom.school=School
