Add OPC Review and day indicator on PT

--- a/MessageKeys/pei_custom.CA_fr.properties
+++ b/MessageKeys/pei_custom.CA_fr.properties
@@ -49,3 +49,4 @@ psx.htmlc.admin_students.general_demographics.pei_custom.school=School
 psx.htmlc.admin_alerts.medicalalert.allergies=Allergies
 psx.htmlc.admin_students.student_header_details.homeroom=Homeroom
 psx.htmlc.admin_students.student_header_details.pod=Pod
+psx.htmlc.admin.students.more2.opc_review=OPC Review
