Add pagecataloging for EUI links

--- a/MessageKeys/pei_custom.CA_fr.properties
+++ b/MessageKeys/pei_custom.CA_fr.properties
@@ -50,3 +50,4 @@ psx.htmlc.admin_alerts.medicalalert.allergies=Allergies
 psx.htmlc.admin_students.student_header_details.homeroom=Homeroom
 psx.htmlc.admin_students.student_header_details.pod=Pod
 psx.htmlc.admin.students.more2.opc_review=OPC Review
+psx.htmlc.admin_nav.students.opc_review=OPC Review
