--- a/MessageKeys/pei_custom.CA_fr.properties
+++ b/MessageKeys/pei_custom.CA_fr.properties
@@ -50,3 +50,58 @@ psx.htmlc.admin_alerts.medicalalert.allergies=Allergies
 psx.htmlc.admin_students.student_header_details.homeroom=Homeroom
 psx.htmlc.admin_students.student_header_details.pod=Pod
 psx.htmlc.admin.students.more2.opc_review=OPC Review
+psx.htmlc.admin.students.namechange.instructions=Instructions
+psx.htmlc.admin.students.namechange.thetextin=The text in red will not print when you print your printed reports.
+psx.htmlc.admin.students.namechange.tipsfor=Tips for printing:
+psx.htmlc.admin.students.namechange.toprint=To print, press Ctrl-P or select print from the snowman menu in the upper right corner of your browser.
+psx.htmlc.admin.students.namechange.thisform=This form is designed for the paper size: Letter (8.5 x 11in).
+psx.htmlc.admin.students.namechange.turn=Turn
+psx.htmlc.admin.students.namechange.on=on
+psx.htmlc.admin.students.namechange.printingof=printing of backgrounds. Shading and colorations in this reports are all "backgrounds", and not printing backgrounds will generally lead to illegible printouts.
+psx.htmlc.admin.students.namechange.off=off
+psx.htmlc.admin.students.namechange.printingofheader=printing of "header" information in your browser settings.
+psx.htmlc.admin.students.namechange.ifthisis=If this is not off, each page printed will include (depending on browser) the URL of this page, a page number, and a time stamp.
+psx.htmlc.admin.students.namechange.theseare=These are generally not desired when printing forms/reports.
+psx.htmlc.admin.students.namechange.select=Select
+psx.htmlc.admin.students.namechange.nomargins=No margins
+psx.htmlc.admin.students.namechange.whenprinting=when printing.
+psx.htmlc.admin.students.namechange.thenecessary=The necessary margins are built into the document.
+psx.htmlc.admin.students.namechange.otherwise=Otherwise the report card will not be centered on the page.
+psx.htmlc.admin.students.namechange.oncecompleted=Once completed and signed, make any necessary updates to the student's PowerSchool profile and file the signed form in the Student's Cumulative Folder.
+psx.htmlc.admin.students.namechange.thisformopened=This form opened in a new tab/window.
+psx.htmlc.admin.students.namechange.onceyouare=Once you are done printing, close this tab/window to return to your previous PowerSchool session.
+psx.htmlc.admin.students.namechange.title=Formulaire de changement de nom
+psx.htmlc.admin.students.namechange.department=Ministère de l'Éducation et de la Petite enfance
+psx.htmlc.admin.students.namechange.studentnumber=Numéro d'élève :
+psx.htmlc.admin.students.namechange.dob=Date de naissance (aaaa-mm-jj) :
+psx.htmlc.admin.students.namechange.current=Nom actuel
+psx.htmlc.admin.students.namechange.change=Nouveau nom
+psx.htmlc.admin.students.namechange.legalfirst=Prénom légal
+psx.htmlc.admin.students.namechange.verification=(Documentation de vérification requise)
+psx.htmlc.admin.students.namechange.legalmiddle=Deuxième prénom légal
+psx.htmlc.admin.students.namechange.legallast=Nom légal
+psx.htmlc.admin.students.namechange.commonfirst=Prénom (courant)
+psx.htmlc.admin.students.namechange.commonmiddle=Deuxième prénom (courant)
+psx.htmlc.admin.students.namechange.commonlast=Nom (courant)
+psx.htmlc.admin.students.namechange.thelegalandcommon=Le nom légal et le nom courant seront présentés comme suit :
+psx.htmlc.admin.students.namechange.commonandlegal=Les noms légal et courant sont conservés dans le système d'information scolaire.
+psx.htmlc.admin.students.namechange.graduationdiploma=Le diplôme présente le nom légal seulement.
+psx.htmlc.admin.students.namechange.enrollmentconfirmation=La lettre de confirmation d'inscription présente les noms légal et courant.
+psx.htmlc.admin.students.namechange.highschooltranscript=Le relevé de notes du secondaire présente les noms légal et courant.
+psx.htmlc.admin.students.namechange.reportcarddisplays=Les bulletins présentent le nom courant, mais peuvent inclure le nom légal, au besoin.
+psx.htmlc.admin.students.namechange.commonnameis=Le nom courant est présenté et utilisé des manières suivantes :
+psx.htmlc.admin.students.namechange.classlists=Listes d'élèves, bulletins, Google Workspace, système intégré de gestion de bibliothèque, système de paiement des frais scolaires, système de transport, myBlueprint, dossiers liés aux évaluations provinciales, Programme d'alimentation scolaire
+psx.htmlc.admin.students.namechange.listsprovided=Listes fournies pour différents processus (p. ex. photos scolaires et vaccination)
+psx.htmlc.admin.students.namechange.thepublicschools=La Commission scolaire de langue française reconnaît que les élèves peuvent utiliser un nom autre que leur nom légal pour s'identifier.
+psx.htmlc.admin.students.namechange.everyeffortwill= On s'efforcera d'utiliser le nom courant lorsque le nom légal n'est pas requis, mais le nom légal pourrait être utilisé dans certaines circonstances.
+psx.htmlc.admin.students.namechange.externalcommunications=Les communications externes pourraient continuer de présenter votre nom légal, ce qui peut comprendre, sans s'y limiter, des communications avec l'Agence du revenu du Canada (ARC) et la Santé publique.
+psx.htmlc.admin.students.namechange.checkallthat=Cochez toutes les réponses qui s'appliquent :
+psx.htmlc.admin.students.namechange.irequestlegal=Je demande que mon nom légal (le nom légal de mon élève) soit changé tel qu'autorisé dans la documentation de l'État civil.
+psx.htmlc.admin.students.namechange.irequestcommon=Je demande que mon nom courant (le nom courant de mon élève) soit changé.
+psx.htmlc.admin.students.namechange.parent=Signature du parent ou de la tutrice ou du tuteur (le cas échéant) :
+psx.htmlc.admin.students.namechange.student=Signature de l'élève (le cas échéant) :
+psx.htmlc.admin.students.namechange.administrator=Signature de l'administratrice ou administrateur :
+psx.htmlc.admin.students.namechange.studentinformation=Responsable de la mise à jour du système d'information scolaire :
+psx.htmlc.admin.students.namechange.documentationform=La documentation de l'État civil est requise pour effectuer un changement de nom légal; elle doit être jointe à la demande ou remise en personne à l'école.
+psx.htmlc.admin.students.namechange.date=Date :
+psx.htmlc.admin.students.namechange.filing=Filing : Student Cumulative Record
