--- a/MessageKeys/pei_custom.US_en.properties
+++ b/MessageKeys/pei_custom.US_en.properties
@@ -50,3 +50,58 @@ psx.htmlc.admin_alerts.medicalalert.allergies=Allergies
 psx.htmlc.admin_students.student_header_details.homeroom=Homeroom
 psx.htmlc.admin_students.student_header_details.pod=Pod
 psx.htmlc.admin.students.more2.opc_review=OPC Review
+psx.htmlc.admin.students.namechange.instructions=Instructions
+psx.htmlc.admin.students.namechange.thetextin=The text in red will not print when you print your printed reports.
+psx.htmlc.admin.students.namechange.tipsfor=Tips for printing:
+psx.htmlc.admin.students.namechange.toprint=To print, press Ctrl-P or select print from the snowman menu in the upper right corner of your browser.
+psx.htmlc.admin.students.namechange.thisform=This form is designed for the paper size: Letter (8.5 x 11in).
+psx.htmlc.admin.students.namechange.turn=Turn
+psx.htmlc.admin.students.namechange.on=on
+psx.htmlc.admin.students.namechange.printingof=printing of backgrounds. Shading and colorations in this reports are all "backgrounds", and not printing backgrounds will generally lead to illegible printouts.
+psx.htmlc.admin.students.namechange.off=off
+psx.htmlc.admin.students.namechange.printingofheader=printing of "header" information in your browser settings.
+psx.htmlc.admin.students.namechange.ifthisis=If this is not off, each page printed will include (depending on browser) the URL of this page, a page number, and a time stamp.
+psx.htmlc.admin.students.namechange.theseare=These are generally not desired when printing forms/reports.
+psx.htmlc.admin.students.namechange.select=Select
+psx.htmlc.admin.students.namechange.nomargins=No margins
+psx.htmlc.admin.students.namechange.whenprinting=when printing.
+psx.htmlc.admin.students.namechange.thenecessary=The necessary margins are built into the document.
+psx.htmlc.admin.students.namechange.otherwise=Otherwise the report card will not be centered on the page.
+psx.htmlc.admin.students.namechange.oncecompleted=Once completed and signed, make any necessary updates to the student's PowerSchool profile and file the signed form in the Student's Cumulative Folder.
+psx.htmlc.admin.students.namechange.thisformopened=This form opened in a new tab/window.
+psx.htmlc.admin.students.namechange.onceyouare=Once you are done printing, close this tab/window to return to your previous PowerSchool session.
+psx.htmlc.admin.students.namechange.title=Name Change Form
+psx.htmlc.admin.students.namechange.department=Department of Education and Early Years
+psx.htmlc.admin.students.namechange.studentnumber=Student Number:
+psx.htmlc.admin.students.namechange.dob=Date Of Birth:
+psx.htmlc.admin.students.namechange.current=Current
+psx.htmlc.admin.students.namechange.change=Change
+psx.htmlc.admin.students.namechange.legalfirst=Legal First Name:
+psx.htmlc.admin.students.namechange.verification=(Verification Documentation Required)
+psx.htmlc.admin.students.namechange.legalmiddle=Legal Middle Name:
+psx.htmlc.admin.students.namechange.legallast=Legal Last Name:
+psx.htmlc.admin.students.namechange.commonfirst=(Common) First Name:
+psx.htmlc.admin.students.namechange.commonmiddle=(Common) Middle Name:
+psx.htmlc.admin.students.namechange.commonlast=(Common) Last Name:
+psx.htmlc.admin.students.namechange.thelegalandcommon=The legal and common name will be displayed in the following ways:
+psx.htmlc.admin.students.namechange.commonandlegal=Common and legal names are maintained in the student information system
+psx.htmlc.admin.students.namechange.graduationdiploma=Graduation Diploma displays legal name only
+psx.htmlc.admin.students.namechange.enrollmentconfirmation=Enrollment confirmation letter displays the legal and common name
+psx.htmlc.admin.students.namechange.highschooltranscript=High School Transcript displays legal and common name
+psx.htmlc.admin.students.namechange.reportcarddisplays=Report cards display common names but can list legal names, if required
+psx.htmlc.admin.students.namechange.commonnameis=Common name is displayed and shared in the following ways:
+psx.htmlc.admin.students.namechange.classlists=Class lists, Report Cards, Google Workspace, Library Management System, School Fee Payment System, Transportation System, MyBlueprint, Provincial Assessment Records, School Lunch Program
+psx.htmlc.admin.students.namechange.listsprovided=Lists provided for various processes (examples: school photos and immunizations)
+psx.htmlc.admin.students.namechange.thepublicschools=The Public Schools Branch recognizes that students may use a name other than their legal name to identify themselves.
+psx.htmlc.admin.students.namechange.everyeffortwill=Every effort will be made to ensure the common name is used where the legal name is not required, however there may be circumstances where the legal name is presented.
+psx.htmlc.admin.students.namechange.externalcommunications=External communications may continue to use your legal name, such as, but not limited to communications with the Canada Revenue Agency (CRA) and Public Health.
+psx.htmlc.admin.students.namechange.checkallthat=Check all that apply:
+psx.htmlc.admin.students.namechange.irequestlegal=I request that my (my student's) legal name be changed as authorized by my documentation from Vital Statistics.
+psx.htmlc.admin.students.namechange.irequestcommon=I request that my (my student's) common name be changed
+psx.htmlc.admin.students.namechange.parent=Parent/Guardian signature (if applicable)
+psx.htmlc.admin.students.namechange.student=Student's signature (if applicable)
+psx.htmlc.admin.students.namechange.administrator=Administrator's signature
+psx.htmlc.admin.students.namechange.studentinformation=Student Information System Updated by:
+psx.htmlc.admin.students.namechange.documentationform=Documentation from Vital Statistics is required to make a legal name change and must be attached or presented in person at the school.
+psx.htmlc.admin.students.namechange.date=Date:
+psx.htmlc.admin.students.namechange.filing=Filing: Student Cumulative Record
