--- a/MessageKeys/pei_custom.US_en.properties
+++ b/MessageKeys/pei_custom.US_en.properties
@@ -46,3 +46,5 @@ psx.htmlc.admin_students.general_demographics.pei_custom.former_legal_name=Forme
 psx.htmlc.admin_students.general_demographics.pei_custom.date_archived=Date Archived
 psx.htmlc.admin_students.general_demographics.pei_custom.updated_by=Updated by
 psx.htmlc.admin_students.general_demographics.pei_custom.school=School
+psx.htmlc.admin_students.student_alerts.pei_custom.pod=Pod
+psx.htmlc.admin_students.student_alerts.pei_custom.hr=HR
